test/bad/sample45.dave
// Testing Semantic Analysis
// Failed Case Testing
int main() {
	str x = "Test";
	int[] a = [1,2,3];
	print(a[x]);
}